<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <!-- First Name input -->
    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"/>

    <!-- Last Name input -->
    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"/>

    <!-- Date of Birth input -->
    <EditText
        android:id="@+id/dateOfBirthEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth"/>

    <!-- Gender input -->
    <EditText
        android:id="@+id/genderEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender"/>


    <!-- Phone Number input -->

    <!-- Weight input -->
    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight_in_kg"
        android:inputType="numberDecimal"/>

    <!-- Height input -->
    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height_in_cm"
        android:inputType="number"/>
    <!-- Email input -->
    <EditText
        android:id="@+id/SignUPEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userSignUpEmail"
        android:inputType="textEmailAddress" />

    <!-- Password input -->
    <EditText
        android:id="@+id/SignUPPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userSignUpPassword"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/userSignUpbutton" />

</LinearLayout>
