...
        android:layout_height="wrap_content"
        android:hint="@string/UPheight_in_cm"
        android:inputType="number"/>

    <!-- Email input -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userUpdateEmail"
        android:inputType="textEmailAddress" />

    <!-- Button to save changes -->
...
